exemplos/simul-shop/istio/10/front-end-canary-release-with-gateway.yaml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: front-end # Qualquer nome, escolha um que faz sentido para a regra
  namespace: default
spec:
  hosts:
    - simul-shop.com # <--- quando usamos pelo gateway. Repete a lista de hosts que está no gateway. Ideal utilizar FQDN.
  gateways:
  - default-gateway # <--- O nome do gateway que será configurado
  http:
    - route:
        - destination:
            host: front-end.default.svc.cluster.local # O endereço alvo. Podem ser diferentes
            subset: v1-set # Mesmo nome definido para o subset no DestinationRule para esse host
          weight: 90 # Em percentual, quantiade aproximada de requisições que vão para o subconjunto v1-set
        - destination:
            host: front-end.default.svc.cluster.local # O endereço alvo. Não precisa ser o mesmo
            subset: v2-set # Mesmo nome definido para o subset no DestinationRule para esse host
          weight: 10 # por cento irá para o subconjunto v2-set
---
# Define quais PODs fazem parte de cada subconjunto (subset)
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: front-end-drs # Qualquer nome.
  namespace: default
spec:
  host: front-end.default.svc.cluster.local # k8s service name, FQDN ou abriaviado.
  subsets:
    - labels: # Seletor
        version: v1 # PODs do serviço front-end.default.svc.cluster.local com o label version: v1 fazem parte desse subconjunto
      name: v1-set # Qualquer nome, mas que represente o subconjunto.
    - labels: # Seletor
        version: v2 # Da mesma forma, PODs do mesmo serviço (host = k8s service) com o label version: v2 fazem parte desse subconjunto
      name: v2-set # Qualquer nome, mas que represente o subconjunto, nesse caso PODs da versao dois.
